--- a/index.html
+++ b/index.html
@@ -2,15 +2,18 @@
 <html>
 
 <head>
-    <title>Elasta Plastic</title>
+    <title>Exacta Plastics</title>
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+    <script src="https://use.fontawesome.com/ec3bd78570.js"></script>
 </head>
 <body>
+<h1> src="" alt="logo" id="logo" </h1>
 
 
 
 
 
 </body>
-</html>	
+</html>		
