--- a/index.html
+++ b/index.html
@@ -1,19 +1,288 @@
-<!DOCTYPE html>
-<html>
-
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title>Exacta Plastics</title>
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
-    <script src="https://use.fontawesome.com/ec3bd78570.js"></script>
-</head>
-<body>
-<h1> src="" alt="logo" id="logo" </h1>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<link rel="stylesheet" href="style.css" />
 
+<title>Exacta Plastic</title>
+</head>
+
+<body>
+<div class="topheader">
+<div class="insidetop">
+<div class="logo"><img src="images/logo.jpg"></div>
+</div>
+</div>
+
+<div class="menu">
+<div class="insidemenu">
+<ul>
+  <li><a href="index.html">Home</a></li>
+  <li><a href="about.html">About Us</a></li>
+  <li><a href="index.html">Services</a></li>
+  <li class="dropdown">
+  <a href="javascript:void(0)" class="dropbtn">Product</a>
+  <div class="dropdown-content">
+      <a href="nonmetalic.html">Non-Metallic Scrappers</a>
+      <a href="gangboxes.html">Gang Boxes</a>
+      <a href="stringerboxes.html">Stringer Boxes</a>
+      <a href="product.html">Wolf Claw</a>
+    </div>
+  </li>
+  <li><a href="contact.html">Contact Us</a></li>
+</ul>
+</div>
+</div>
+
+<div class="banner"><img src="images/banner.jpg"/></div>
+
+<div class="content">
+<h1 style="margin:20px 0 20px 0;">WELCOME TO EXACTA PLASTICS</h1>
+<p style="margin:0 0 0 0; padding:10px 0 15px 0; font-size:18px;">Exacta Plastics, Inc. serves their customers in USA and abroad with it's complete plastic injection molding 
+and mold making capabilities in Southern California. To be competitive in mold making we also have our 
+mold making facility offshore in India.</p>
+<p  style="margin:0 0 0 0; padding:10px 0 15px 0; font-size:18px;">Exacta Plastics, Inc. also performs secondary operations like assembly and machining for their customers.</p>
+<p  style="margin:0 0 0 0; padding:10px 0 15px 0; font-size:18px;">Since 1973, Exacta Plastics, Inc. has been a valued partner to their customers in the fields of Medical Devices, 
+Defense, Power Tools and Commercial Applications. We help customers identify appropriate resin for their 
+application and help them through design and developmental phase. Exacta Plastics, Inc. has 75 to 400 tons 
+of molding machine range.
+</p>
+</div>
+
+
+
+<div class="aftercontent">
+
+
+<div class="aftercontentdata">
+<div class="leftside">
+
+<div class="title">OUR SERVICES&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</div>
+<p style="padding:15px; text-align:left; line-height:40px; font-size:22px; color:#09014c;">
+* Tooling<br />
+* Plastic Injection Molding<br />
+* Assembling<br />
+</p>
+<div class="title" style="margin:15px 0 0 0;">OUR PRODUCTS&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</div>
+<p style="padding:15px; text-align:left; line-height:40px; font-size:22px; color:#09014c;">
+<a href="product.html">* Wolf Claw Pole and Tree Climbing Boot Harness</a><br />
+<a href="gangboxes.html">* Gang Boxes</a><br />
+<a href="stringerboxes.html">* Stringer Boxes</a><br />
+<a href="nonmetalic.html">* Non-Metallic Scrappers</a><br />
+</p>
+
+</div>
+
+<div class="rightside">
+<div class="title" style="text-align:left;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;CONTACT US</div>
+
+<style>
+@import url(https://fonts.googleapis.com/css?family=Roboto:400,300,600,400italic);
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-font-smoothing: antialiased;
+  -moz-font-smoothing: antialiased;
+  -o-font-smoothing: antialiased;
+  font-smoothing: antialiased;
+  text-rendering: optimizeLegibility;
+}
+
+body {
+ 
+}
+
+.container {
+  max-width: 400px;
+  width: 100%;
+
+  margin-top: -25%;
+  margin-bottom: -95px;
+  position: relative;
+
+   font-family: "Roboto", Helvetica, Arial, sans-serif;
+  font-weight: 100;
+  font-size: 12px;
+  line-height: 30px;
+  color: #777;
+  background: #f2f7f9;
+}
+
+#contact input[type="text"],
+#contact input[type="email"],
+#contact input[type="tel"],
+#contact input[type="url"],
+#contact textarea,
+#contact button[type="submit"] {
+  font: 400 12px/16px "Roboto", Helvetica, Arial, sans-serif;
+}
+
+#contact {
+  background: #09acc1;
+  padding: 25px;
+  margin: 150px 0;
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+}
+
+#contact h3 {
+  display: block;
+  font-size: 30px;
+  font-weight: 300;
+  margin-bottom: 10px;
+}
+
+#contact h4 {
+  margin: 5px 0 15px;
+  display: block;
+  font-size: 13px;
+  font-weight: 400;
+}
+
+fieldset {
+  border: medium none !important;
+  margin: 0 0 10px;
+  min-width: 100%;
+  padding: 0;
+  width: 100%;
+}
+
+#contact input[type="text"],
+#contact input[type="email"],
+#contact input[type="tel"],
+#contact input[type="url"],
+#contact textarea {
+  width: 100%;
+  border: 1px solid #ccc;
+  background: #FFF;
+  margin: 0 0 5px;
+  padding: 10px;
+}
+
+#contact input[type="text"]:hover,
+#contact input[type="email"]:hover,
+#contact input[type="tel"]:hover,
+#contact input[type="url"]:hover,
+#contact textarea:hover {
+  -webkit-transition: border-color 0.3s ease-in-out;
+  -moz-transition: border-color 0.3s ease-in-out;
+  transition: border-color 0.3s ease-in-out;
+  border: 1px solid #aaa;
+}
+
+#contact textarea {
+  height: 100px;
+  max-width: 100%;
+  resize: none;
+}
+
+#contact button[type="submit"] {
+  cursor: pointer;
+  width: 100%;
+  border: none;
+  background: #23367f;
+  color: #FFF;
+  margin: 0 0 5px;
+  padding: 10px;
+  font-size: 15px;
+}
+
+#contact button[type="submit"]:hover {
+  background: #23367f;
+  -webkit-transition: background 0.3s ease-in-out;
+  -moz-transition: background 0.3s ease-in-out;
+  transition: background-color 0.3s ease-in-out;
+}
+
+#contact button[type="submit"]:active {
+  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.5);
+}
+
+.copyright {
+  text-align: center;
+}
+
+#contact input:focus,
+#contact textarea:focus {
+  outline: 0;
+  border: 1px solid #aaa;
+}
+
+::-webkit-input-placeholder {
+  color: #888;
+}
+
+:-moz-placeholder {
+  color: #888;
+}
+
+::-moz-placeholder {
+  color: #888;
+}
+
+:-ms-input-placeholder {
+  color: #888;
+}
+</style>
+<div class="container">  
+  <form id="contact" action="contact_us.php" method="post">
+    
+    <fieldset>
+      <input placeholder="Full Name" name="fname" type="text" tabindex="1" required autofocus>
+    </fieldset>
+    
+    <fieldset>
+      <input placeholder="Phone" name="phoneno" type="tel" tabindex="2" required>
+    </fieldset>
+    <fieldset>
+      <input placeholder="Email" name="emailid" type="email" tabindex="3" required>
+    </fieldset>
+    <fieldset>
+      <textarea name="message" placeholder="Type your message here...." tabindex="5" required></textarea>
+    </fieldset>
+    <fieldset >
+      <button name="submit" type="submit" id="contact-submit" data-submit="...Sending">Submit</button>
+    </fieldset>
+
+  </form>
+
+</div>
+</div>
+
+
+<div class="botton">
+<div class="last"><h1 style="line-height:40px; padding:40px 0 0 0;">EXACTA<br />PLASTIC, INC.</h1></div>
+<div class="last">
+<h2 style="text-align:center; margin:15px 0 15px 0;">Link</h2>
+<div class="bottommenu" style="border-top: #FFF solid 2px; width:300px; padding:0 0 0 0; "><a href="index.html">HOME</a></div>
+<div class="bottommenu"><a href="about.html">ABOUT US</a></div>
+<div class="bottommenu"><a href="service.html">SERVICE</a></div>
+<div class="bottommenu"><a href="product.html">PRODUCTS</a></div>
+<div class="bottommenu"><a href="contact.html">CONTACT US</a></div>
+
+</div>
+
+
+<div class="last">
+<h2 style="text-align:center;  margin:15px 0 15px 0;">Contact Us</h2>
+<div class="bottommenu" style="border-top: #FFF solid 2px; width:300px; padding:15px 0 0 0; font-size:22px; line-height:40px;">137 N. Joy St.<br />Corona, CA 92879<br />Ph. (818) 768-1234</div>
+</div>
+
+<div class="bottommenu" style="width:1050px; float:left; background-color:#FFF; color:#000;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; excataplastics.com 2017 / All Rights Reserved</div>
+<div class="bottommenu" style="width:1050px; float:left; background-color:#09014c; color:#000; height:25px;"></div>
+
+
+</div>
+
+
+
+</div>
+</div>
 
 
 
 
 </body>
-</html>		
+</html>
