changed some styling working on images

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <li><a href="index.html">Home</a></li>
   <li><a href="about.html">About Us</a></li>
   <li><a href="index.html">Services</a></li>
+
   <li class="dropdown">
   <a href="javascript:void(0)" class="dropbtn">Product</a>
   <div class="dropdown-content">
@@ -38,7 +39,7 @@
 
 <div class="content">
 <h1 style="margin:20px 0 20px 0;">WELCOME TO EXACTA PLASTICS</h1>
-<p style="margin:0 0 0 0; padding:10px 0 15px 0; font-size:18px;">Exacta Plastics, Inc. serves their customers in USA and abroad with it's complete plastic injection molding 
+<p style="margin:0 0 0 0; padding:10px 0 15px 0; font-size:24px;">Exacta Plastics, Inc. serves their customers in USA and abroad with it's complete plastic injection molding 
 and mold making capabilities in Southern California. To be competitive in mold making we also have our 
 mold making facility offshore in India.</p>
 <p  style="margin:0 0 0 0; padding:10px 0 15px 0; font-size:18px;">Exacta Plastics, Inc. also performs secondary operations like assembly and machining for their customers.</p>
@@ -63,7 +64,7 @@ of molding machine range.
 * Plastic Injection Molding<br />
 * Assembling<br />
 </p>
-<div class="title" style="margin:15px 0 0 0;">OUR PRODUCTS&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</div>
+<div class="title titletext" style="margin:15px 0 0 0;">OUR PRODUCTS&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</div>
 <p style="padding:15px; text-align:left; line-height:40px; font-size:22px; color:#09014c;">
 <a href="product.html">* Wolf Claw Pole and Tree Climbing Boot Harness</a><br />
 <a href="gangboxes.html">* Gang Boxes</a><br />
@@ -122,9 +123,10 @@ body {
 
 #contact {
   background: #09acc1;
-  padding: 25px;
+  padding:40px;
   margin: 150px 0;
   box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+  width:500px;
 }
 
 #contact h3 {
