--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link rel="stylesheet" href="style.css" />
+<script src="https://use.fontawesome.com/2691ad8745.js"></script>
 
 <title>Exacta Plastic</title>
 </head>
@@ -60,16 +61,16 @@ of molding machine range.
 
 <div class="title">OUR SERVICES&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</div>
 <p style="padding:15px; text-align:left; line-height:40px; font-size:22px; color:#09014c;">
-* Tooling<br />
-* Plastic Injection Molding<br />
-* Assembling<br />
+<i class="fa fa-plus-square" aria-hidden="true"></i> Tooling<br />
+<i class="fa fa-plus-square" aria-hidden="true"></i> Plastic Injection Molding<br />
+<i class="fa fa-plus-square" aria-hidden="true"></i> Assembling<br />
 </p>
 <div class="title titletext" style="margin:15px 0 0 0;">OUR PRODUCTS&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</div>
 <p style="padding:15px; text-align:left; line-height:40px; font-size:22px; color:#09014c;">
-<a href="product.html">* Wolf Claw Pole and Tree Climbing Boot Harness</a><br />
-<a href="gangboxes.html">* Gang Boxes</a><br />
-<a href="stringerboxes.html">* Stringer Boxes</a><br />
-<a href="nonmetalic.html">* Non-Metallic Scrappers</a><br />
+<a href="product.html"><i class="fa fa-plus-square" aria-hidden="true"></i> Wolf Claw Pole and Tree Climbing Boot Harness</a><br />
+<a href="gangboxes.html"><i class="fa fa-plus-square" aria-hidden="true"></i> Gang Boxes</a><br />
+<a href="stringerboxes.html"><i class="fa fa-plus-square" aria-hidden="true"></i> Stringer Boxes</a><br />
+<a href="nonmetalic.html"><i class="fa fa-plus-square" aria-hidden="true"></i> Non-Metallic Scrappers</a><br />
 </p>
 
 </div>
@@ -272,7 +273,7 @@ fieldset {
 <div class="bottommenu" style="border-top: #FFF solid 2px; width:300px; padding:15px 0 0 0; font-size:22px; line-height:40px;">137 N. Joy St.<br />Corona, CA 92879<br />Ph. (818) 768-1234</div>
 </div>
 
-<div class="bottommenu" style="width:1050px; float:left; background-color:#FFF; color:#000;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; excataplastics.com 2017 / All Rights Reserved</div>
+<div class="bottommenu" style="width:1050px; float:left; background-color:#FFF; color:#000;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &copy; Copyright alphaonestategy.com 2017</div>
 <div class="bottommenu" style="width:1050px; float:left; background-color:#09014c; color:#000; height:25px;"></div>
 
 
