changet html and css

--- a/index.html
+++ b/index.html
@@ -1,29 +1,24 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
+
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link rel="stylesheet" href="style.css" />
 <script src="https://use.fontawesome.com/2691ad8745.js"></script>
+<link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
 
 <title>Exacta Plastic</title>
 </head>
 
 <body>
-<div class="topheader">
-<div class="insidetop">
-<div class="logo"><img src="images/logo.jpg"></div>
-</div>
-</div>
-
-<div class="menu">
 <div class="insidemenu">
 <ul>
-  <li><a href="index.html">Home</a></li>
-  <li><a href="about.html">About Us</a></li>
-  <li><a href="index.html">Services</a></li>
+  <li><a href="index.html" class="navcolor">Home</a></li>
+  <li><a href="about.html" class="navcolor">About Us</a></li>
+  <li><a href="index.html" class="navcolor">Services</a></li>
 
   <li class="dropdown">
-  <a href="javascript:void(0)" class="dropbtn">Product</a>
+  <a href="javascript:void(0)" class="dropbtn navcolor">Product</a>
   <div class="dropdown-content">
       <a href="nonmetalic.html">Non-Metallic Scrappers</a>
       <a href="gangboxes.html">Gang Boxes</a>
@@ -31,7 +26,7 @@
       <a href="product.html">Wolf Claw</a>
     </div>
   </li>
-  <li><a href="contact.html">Contact Us</a></li>
+ 
 </ul>
 </div>
 </div>
@@ -40,11 +35,11 @@
 
 <div class="content">
 <h1 style="margin:20px 0 20px 0;">WELCOME TO EXACTA PLASTICS</h1>
-<p style="margin:0 0 0 0; padding:10px 0 15px 0; font-size:24px;">Exacta Plastics, Inc. serves their customers in USA and abroad with it's complete plastic injection molding 
+<p style="margin:0 0 0 0; padding:10px 0; font-size:22px;">Exacta Plastics, Inc. serves their customers in USA and abroad with it's complete plastic injection molding 
 and mold making capabilities in Southern California. To be competitive in mold making we also have our 
 mold making facility offshore in India.</p>
-<p  style="margin:0 0 0 0; padding:10px 0 15px 0; font-size:18px;">Exacta Plastics, Inc. also performs secondary operations like assembly and machining for their customers.</p>
-<p  style="margin:0 0 0 0; padding:10px 0 15px 0; font-size:18px;">Since 1973, Exacta Plastics, Inc. has been a valued partner to their customers in the fields of Medical Devices, 
+<p  style="margin:0 0 0 0; padding:10px 0 15px 0; font-size:22px;">Exacta Plastics, Inc. also performs secondary operations like assembly and machining for their customers.</p>
+<p  style="margin:0 0 0 0; padding:10px 0 15px 0; font-size:22px;">Since 1973, Exacta Plastics, Inc. has been a valued partner to their customers in the fields of Medical Devices, 
 Defense, Power Tools and Commercial Applications. We help customers identify appropriate resin for their 
 application and help them through design and developmental phase. Exacta Plastics, Inc. has 75 to 400 tons 
 of molding machine range.
@@ -270,7 +265,7 @@ fieldset {
 
 <div class="last">
 <h2 style="text-align:center;  margin:15px 0 15px 0;">Contact Us</h2>
-<div class="bottommenu" style="border-top: #FFF solid 2px; width:300px; padding:15px 0 0 0; font-size:22px; line-height:40px;">137 N. Joy St.<br />Corona, CA 92879<br />Ph. (818) 768-1234</div>
+<div class="bottommenu" style="border-top: #FFF solid 2px; width:300px; padding:15px 0 0 0; font-size:22px; line-height:30px;">137 N. Joy St.<br />Corona, CA 92879<br />Ph. (818) 768-1234</div>
 </div>
 
 <div class="bottommenu" style="width:1050px; float:left; background-color:#FFF; color:#000;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &copy; Copyright alphaonestategy.com 2017</div>
