css input size change

--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@ body {
   margin: 150px 0;
   box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
   width:500px;
+  height:360px;
 }
 
 #contact h3 {
