--- a/index.html
+++ b/index.html
@@ -34,12 +34,13 @@
 <div class="banner"><img src="images/banner.jpg"/></div>
 
 <div class="content">
-<h1 style="margin:20px 0 20px 0;">WELCOME TO EXACTA PLASTICS</h1>
-<p style="margin:0 0 0 0; padding:10px 0; font-size:22px;">Exacta Plastics, Inc. serves their customers in USA and abroad with it's complete plastic injection molding 
+<h1 style="margin:20px 0 20px 0; font-size:35px;">WELCOME TO EXACTA PLASTICS</h1>
+<hr>
+<p style="margin:0 0 0 0; padding:10px 0; padding:left10%; font-size:20px; width:101%;">Exacta Plastics, Inc. serves their customers in USA and abroad with it's complete plastic injection molding 
 and mold making capabilities in Southern California. To be competitive in mold making we also have our 
 mold making facility offshore in India.</p>
-<p  style="margin:0 0 0 0; padding:10px 0 15px 0; font-size:22px;">Exacta Plastics, Inc. also performs secondary operations like assembly and machining for their customers.</p>
-<p  style="margin:0 0 0 0; padding:10px 0 15px 0; font-size:22px;">Since 1973, Exacta Plastics, Inc. has been a valued partner to their customers in the fields of Medical Devices, 
+<p  style="margin:0 0 0 0; padding:10px 0 15px 0; padding-left:10px; font-size:20px; width:101%; text-align:center;">Exacta Plastics, Inc. also performs secondary operations like assembly and machining for their customers.</p>
+<p  style="margin:0 0 0 0; padding:10px 0 15px 0; padding-left:10px; font-size:20px; width:101%;">Since 1973, Exacta Plastics, Inc. has been a valued partner to their customers in the fields of Medical Devices, 
 Defense, Power Tools and Commercial Applications. We help customers identify appropriate resin for their 
 application and help them through design and developmental phase. Exacta Plastics, Inc. has 75 to 400 tons 
 of molding machine range.
