changs to styling and nav bar.. will no longer use and api's like materialize or bootstrap

--- a/index.html
+++ b/index.html
@@ -5,31 +5,38 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link rel="stylesheet" href="style.css" />
 <script src="https://use.fontawesome.com/2691ad8745.js"></script>
+ <!-- Compiled and minified CSS -->
+  
 <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
 
 <title>Exacta Plastic</title>
 </head>
 
 <body>
+
+  
+         <div class="menu">
 <div class="insidemenu">
 <ul>
-  <li><a href="index.html" class="navcolor">Home</a></li>
-  <li><a href="about.html" class="navcolor">About Us</a></li>
-  <li><a href="index.html" class="navcolor">Services</a></li>
-
+  <li><a href="index.html">Home</a></li>
+  <li><a href="about.html">About Us</a></li>
+  <li><a href="index.html">Services</a></li>
   <li class="dropdown">
-  <a href="javascript:void(0)" class="dropbtn navcolor">Product</a>
+  <a href="javascript:void(0)" class="dropbtn">Products</a>
+
   <div class="dropdown-content">
       <a href="nonmetalic.html">Non-Metallic Scrappers</a>
       <a href="gangboxes.html">Gang Boxes</a>
       <a href="stringerboxes.html">Stringer Boxes</a>
       <a href="product.html">Wolf Claw</a>
     </div>
+
   </li>
- 
+  
 </ul>
 </div>
 </div>
+  
 
 <div class="banner"><img src="images/banner.jpg"/></div>
 
@@ -123,7 +130,7 @@ body {
   padding:40px;
   margin: 150px 0;
   box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
-  width:500px;
+  width:498px;
   height:364px;
 }
 
