--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
          <div class="menu">
 <div class="insidemenu">
 <ul>
+  <img class="navlogo" src="logo.jpeg"/>
   <li><a href="index.html">Home</a></li>
   <li><a href="about.html">About Us</a></li>
   <li><a href="index.html">Services</a></li>
