--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 <div class="content">
 <h1 style="margin:20px 0 20px 0; font-size:35px;">WELCOME TO EXACTA PLASTICS</h1>
 <hr>
+<img class="gearbanner" src="gears.jpg">
 <p style="margin:0 0 0 0; padding:10px 0; padding:left10%; font-size:20px; width:101%;">Exacta Plastics, Inc. serves their customers in USA and abroad with it's complete plastic injection molding 
 and mold making capabilities in Southern California. To be competitive in mold making we also have our 
 mold making facility offshore in India.</p>
