--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ mold making facility offshore in India.</p>
 <p  style="margin:0 0 0 0; padding:10px 0 15px 0; padding-left:10px; font-size:24px; width:101%; text-align:center;">Exacta Plastics, Inc. also performs secondary operations like assembly and machining for their customers.</p>
 <p  style="margin:0 0 0 0; padding:10px 0 15px 0; padding-left:10px; font-size:24px; width:101%;">Since 1973, Exacta Plastics, Inc. has been a valued partner to their customers in the fields of Medical Devices, 
 Defense, Power Tools and Commercial Applications. We help customers identify appropriate resin for their 
-application and help them through design and developmental phase. Exacta Plastics, Inc. has 75 to 400 tons 
+application and help them through design and developmental phase. Exacta Plastics, Inc. has a 75 to 400 tons 
 of molding machine range.
 </p>
 </div>
