--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
          <div class="menu">
 <div class="insidemenu">
 <ul>
-  <img class="navlogo" src="logo.jpeg"/>
+  <img class="navlogo" id="navlogo" src="logo.jpeg"/>
   
   <li><a href="index.html">Home</a></li>
   <li><a href="about.html">About Us</a></li>
