--- a/about.html
+++ b/about.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
@@ -17,9 +18,9 @@
   
          <div class="menu">
 <div class="insidemenu">
-<ul>
-  <img class="navlogo" id="navlogo" src="logo.jpeg"/>
-  
+
+  <img class="navabout" src="logo.jpeg"/>
+  <ul>
   <li><a href="index.html">Home</a></li>
   <li><a href="about.html">About Us</a></li>
   <li><a href="index.html">Services</a></li>
