added css htlm and hopefully fixed logo

--- a/services.html
+++ b/services.html
@@ -22,10 +22,9 @@
   
   <li><a href="index.html">Home</a></li>
   <li><a href="about.html">About Us</a></li>
-  <li><a href="services.html">Services</a></li>
+  <li><a href="index.html">Services</a></li>
   <li class="dropdown">
   <a href="javascript:void(0)" class="dropbtn">Products</a>
-  
 
   <div class="dropdown-content">
       <a href="nonmetalic.html">Non-Metallic Scrappers</a>
@@ -45,12 +44,11 @@
 <hr>
 
 <div class="content">
-<h1 style="margin:20px 0 20px 0; font-size:35px;">WELCOME TO EXACTA PLASTICS</h1>
+<h1 style="margin:20px 0 20px 0; font-size:35px;">SERVICES</h1>
 
 <img class="gearbanner" src="gears.jpg">
-<p style="margin:0 0 0 0; padding:10px 0; padding:left10%; font-size:24px; width:101%;">Exacta Plastics, Inc. serves their customers in USA and abroad with it's complete plastic injection molding 
-and mold making capabilities in Southern California. To be competitive in mold making we also have our 
-mold making facility offshore in India.</p>
+<!--Need text to put in to explain services and what they do -->
+<p style="margin:0 0 0 0; padding:10px 0; padding:left10%; font-size:24px; width:101%;">Exacta Plastics, Inc. has multiple services including....etc.</p>
 <p  style="margin:0 0 0 0; padding:10px 0 15px 0; padding-left:10px; font-size:24px; width:101%; text-align:center;">Exacta Plastics, Inc. also performs secondary operations like assembly and machining for their customers.</p>
 <p  style="margin:0 0 0 0; padding:10px 0 15px 0; padding-left:10px; font-size:24px; width:101%;">Since 1973, Exacta Plastics, Inc. has been a valued partner to their customers in the fields of Medical Devices, 
 Defense, Power Tools and Commercial Applications. We help customers identify appropriate resin for their 
