added service page and changed some css

--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
 </div>
   
 
-<div class="banner"><img src="building.jpeg"/></div>
+
 <hr>
 
 <div class="content">
 <h1 style="margin:20px 0 20px 0; font-size:35px;">WELCOME TO EXACTA PLASTICS</h1>
 
-<img class="gearbanner" src="gears.jpg">
-<p style="margin:0 0 0 0; padding:10px 0; padding:left10%; font-size:24px; width:101%;">Exacta Plastics, Inc. serves their customers in USA and abroad with it's complete plastic injection molding 
+<img class="gearbanner" src="gears.jpeg">
+<p style="margin:0 0 0 0; padding:10px 0; padding:left10%; font-size:24px; width:101%;">Exacta Plastics, Inc. serves their customers in USA and abroad with its complete plastic injection molding 
 and mold making capabilities in Southern California. To be competitive in mold making we also have our 
 mold making facility offshore in India.</p>
 <p  style="margin:0 0 0 0; padding:10px 0 15px 0; padding-left:10px; font-size:24px; width:101%; text-align:center;">Exacta Plastics, Inc. also performs secondary operations like assembly and machining for their customers.</p>
@@ -58,6 +58,8 @@ application and help them through design and developmental phase. Exacta Plastic
 of molding machine range.
 </p>
 </div>
+<div>
+<img src="images/abb.jpeg">
 
 
 
@@ -270,9 +272,9 @@ fieldset {
 <h2 style="text-align:center; margin:15px 0 15px 0;">Link</h2>
 <div class="bottommenu" style="border-top: #FFF solid 2px; width:300px; padding:0 0 0 0; "><a href="index.html">HOME</a></div>
 <div class="bottommenu"><a href="about.html">ABOUT US</a></div>
-<div class="bottommenu"><a href="service.html">SERVICE</a></div>
+<div class="bottommenu"><a href="services.html">SERVICES</a></div>
 <div class="bottommenu"><a href="product.html">PRODUCTS</a></div>
-<div class="bottommenu"><a href="contact.html">CONTACT US</a></div>
+
 
 </div>
 
