--- a/services.html
+++ b/services.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
@@ -6,6 +7,7 @@
 <link rel="stylesheet" href="style.css" />
 <script src="https://use.fontawesome.com/2691ad8745.js"></script>
  <!-- Compiled and minified CSS -->
+ <script src="https://use.fontawesome.com/1bf1d75aae.js"></script>
   
 <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
 
@@ -17,9 +19,9 @@
   
          <div class="menu">
 <div class="insidemenu">
-<ul>
-  <img class="navlogo" src="logo.jpeg"/>
-  
+
+  <img class="navservices" src="logo.jpeg"/>
+  <ul>
   <li><a href="index.html">Home</a></li>
   <li><a href="about.html">About Us</a></li>
   <li><a href="index.html">Services</a></li>
@@ -40,23 +42,25 @@
 </div>
   
 
-<div class="banner"><img src="building.jpeg"/></div>
-<hr>
-
 <div class="content">
-<h1 style="margin:20px 0 20px 0; font-size:35px;">SERVICES</h1>
 
-<img class="gearbanner" src="gears.jpg">
-<!--Need text to put in to explain services and what they do -->
-<p style="margin:0 0 0 0; padding:10px 0; padding:left10%; font-size:24px; width:101%;">Exacta Plastics, Inc. has multiple services including....etc.</p>
-<p  style="margin:0 0 0 0; padding:10px 0 15px 0; padding-left:10px; font-size:24px; width:101%; text-align:center;">Exacta Plastics, Inc. also performs secondary operations like assembly and machining for their customers.</p>
-<p  style="margin:0 0 0 0; padding:10px 0 15px 0; padding-left:10px; font-size:24px; width:101%;">Since 1973, Exacta Plastics, Inc. has been a valued partner to their customers in the fields of Medical Devices, 
-Defense, Power Tools and Commercial Applications. We help customers identify appropriate resin for their 
-application and help them through design and developmental phase. Exacta Plastics, Inc. has a 75 to 400 tons 
-of molding machine range.
+<img class="gearbanner gearpadding" src="gears.jpg">
+<h1>Plastic Injection Molding</h1>
+
+
+<p style="margin:0 0 0 0; padding:5px 0; padding:left:10%; font-size:24px; width:101%; "><i class="fa fa-minus" aria-hidden="true"></i> 44+ years of experience in the plastic injection molding industry.</p>
+<p  style="margin:0 0 0 0; padding:5px 0; padding-left:10px; font-size:24px; width:101%; text-align:center;"><i class="fa fa-minus" aria-hidden="true"></i> Complete plastic injection molding from India and USA.</p>
+<p  style="margin:0 0 0 0; padding:5px 0; padding-left:10px; font-size:24px; width:101%;"><i class="fa fa-minus" aria-hidden="true"></i> Machine sizes ranging from 50 tons to 500 tons.
 </p>
+<p style="margin:0 0 0 0; padding:5px 0; padding:left10%; font-size:24px; width:101%;"><i class="fa fa-minus" aria-hidden="true"></i> Complimentary product design and consulting with quick prototype turn around.</p>
+<p style="margin:0 0 0 0; padding:5px 0; padding:left10%; font-size:24px; width:101%;"><i class="fa fa-minus" aria-hidden="true"></i> Consistany scientific molding, high quality, tight tolerances, and shorter lead time.</p>
+<p style="margin:0 0 0 0; padding:5px 0; padding:left10%; font-size:24px; width:101%;"><i class="fa fa-minus" aria-hidden="true"></i> Value added assemby and packing, inventory protection and free local deleveries.</p>
+<p style="margin:0 0 0 0; padding:5px 0; padding:left10%; font-size:24px; width:101%;"><i class="fa fa-minus" aria-hidden="true"></i> Designing, building, and maintaing the most demanding molds and prototype tooling.</p>
+<p style="margin:0 0 0 0; padding:5px 0; padding:left10%; font-size:24px; width:101%;"><i class="fa fa-minus" aria-hidden="true"></i> Capabilities of building biodegradeble and compostable material.</p>
+<p style="margin:0 0 0 0; padding:5px 0; padding:left10%; font-size:24px; width:101%;"><i class="fa fa-minus" aria-hidden="true"></i> Capabilities to submit critical inspection data, including firt article report submission.</p>
+<p style="margin:0 0 0 0; padding:5px 0; padding:left10%; font-size:24px; width:101%;"><i class="fa fa-minus" aria-hidden="true"></i> 100k Clean Room for medical products.</p>
+<p style="margin:0 0 0 0; padding:5px 0; padding:left10%; font-size:24px; width:101%;"><i class="fa fa-minus" aria-hidden="true"></i> ISO 9001 certified manufacturing.</p>
 </div>
-
 
 
 <div class="aftercontent">
@@ -65,19 +69,7 @@ of molding machine range.
 <div class="aftercontentdata">
 <div class="leftside">
 
-<div class="title">OUR SERVICES&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</div>
-<p style="padding:15px; text-align:left; line-height:40px; font-size:22px; color:#09014c;">
-<i class="fa fa-plus-square" aria-hidden="true"></i> Tooling<br />
-<i class="fa fa-plus-square" aria-hidden="true"></i> Plastic Injection Molding<br />
-<i class="fa fa-plus-square" aria-hidden="true"></i> Assembling<br />
-</p>
-<div class="title titletext" style="margin:15px 0 0 0;">OUR PRODUCTS&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</div>
-<p style="padding:15px; text-align:left; line-height:40px; font-size:22px; color:#09014c;">
-<a href="product.html"><i class="fa fa-plus-square" aria-hidden="true"></i> Wolf Claw Pole and Tree Climbing Boot Harness</a><br />
-<a href="gangboxes.html"><i class="fa fa-plus-square" aria-hidden="true"></i> Gang Boxes</a><br />
-<a href="stringerboxes.html"><i class="fa fa-plus-square" aria-hidden="true"></i> Stringer Boxes</a><br />
-<a href="nonmetalic.html"><i class="fa fa-plus-square" aria-hidden="true"></i> Non-Metallic Scrappers</a><br />
-</p>
+
 
 </div>
 
