--- a/about.html
+++ b/about.html
@@ -264,9 +264,9 @@ fieldset {
 <h2 style="text-align:center; margin:15px 0 15px 0;">Link</h2>
 <div class="bottommenu" style="border-top: #FFF solid 2px; width:300px; padding:0 0 0 0; "><a href="index.html">HOME</a></div>
 <div class="bottommenu"><a href="about.html">ABOUT US</a></div>
-<div class="bottommenu"><a href="service.html">SERVICE</a></div>
+<div class="bottommenu"><a href="services.html">SERVICE</a></div>
 <div class="bottommenu"><a href="product.html">PRODUCTS</a></div>
-<div class="bottommenu"><a href="contact.html">CONTACT US</a></div>
+
 
 </div>
 
