changed gears on homepage to building

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <div class="content">
 <h1 style="margin:20px 0 20px 0; font-size:35px;">WELCOME TO EXACTA PLASTICS</h1>
 
-<img class="gearbanner" src="gears.jpeg">
+<img class="gearbanner" src="build.jpg">
 <p style="margin:0 0 0 0; padding:10px 0; padding:left10%; font-size:24px; width:101%;">Exacta Plastics, Inc. serves their customers in USA and abroad with its complete plastic injection molding 
 and mold making capabilities in Southern California. To be competitive in mold making we also have our 
 mold making facility offshore in India.</p>
