backround change plust attempted font color change

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <a href="nonmetalic.html">Non-Metallic Scrappers</a>
       <a href="gangboxes.html">Gang Boxes</a>
       <a href="stringerboxes.html">Stringer Boxes</a>
-      
+
       
     </div>
 
@@ -51,6 +51,7 @@
 <h1 style="margin:20px 0 20px 0; font-size:35px;">WELCOME TO EXACTA PLASTICS</h1>
 
 <img class="gearbanner" src="build.jpg">
+<div class="fontcolor">
 <p style="margin:0 0 0 0; padding:10px 0; padding:left10%; font-size:24px; width:101%;">Exacta Plastics, Inc. serves their customers in USA and abroad with its complete plastic injection molding 
 and mold making capabilities in Southern California. To be competitive in mold making we also have our 
 mold making facility offshore in India.</p>
@@ -60,6 +61,7 @@ Defense, Power Tools and Commercial Applications. We help customers identify app
 application and help them through design and developmental phase. Exacta Plastics, Inc. has a 75 to 400 tons 
 of molding machine range.
 </p>
+</div>
 </div>
 <div>
 <img src="images/abb.jpeg">
