--- a/services.html
+++ b/services.html
@@ -47,6 +47,8 @@
 <img class="gearbanner gearpadding" src="gears.jpg">
 <h1>Plastic Injection Molding</h1>
 
+<div class="fontcolor">
+
 
 <p style="margin:0 0 0 0; padding:5px 0; padding:left:10%; font-size:24px; width:101%; "><i class="fa fa-minus" aria-hidden="true"></i> 44+ years of experience in the plastic injection molding industry.</p>
 <p  style="margin:0 0 0 0; padding:5px 0; padding-left:10px; font-size:24px; width:101%; text-align:center;"><i class="fa fa-minus" aria-hidden="true"></i> Complete plastic injection molding from India and USA.</p>
@@ -60,6 +62,7 @@
 <p style="margin:0 0 0 0; padding:5px 0; padding:left10%; font-size:24px; width:101%;"><i class="fa fa-minus" aria-hidden="true"></i> Capabilities to submit critical inspection data, including firt article report submission.</p>
 <p style="margin:0 0 0 0; padding:5px 0; padding:left10%; font-size:24px; width:101%;"><i class="fa fa-minus" aria-hidden="true"></i> 100k Clean Room for medical products.</p>
 <p style="margin:0 0 0 0; padding:5px 0; padding:left10%; font-size:24px; width:101%;"><i class="fa fa-minus" aria-hidden="true"></i> ISO 9001 certified manufacturing.</p>
+</div>
 </div>
 
 
