--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   
 
   <div class="dropdown-content">
-      <a href="nonmetalic.html">Non-Metallic Scrappers</a>
+      <a href="scrapers.html">Non-Metallic Scrappers</a>
       <a href="gangboxes.html">Gang Boxes</a>
       <a href="stringerboxes.html">Stringer Boxes</a>
 
