--- a/services.html
+++ b/services.html
@@ -29,7 +29,7 @@
   <a href="javascript:void(0)" class="dropbtn">Products</a>
 
   <div class="dropdown-content">
-      <a href="nonmetalic.html">Non-Metallic Scrappers</a>
+      <a href="scrapers.html">Non-Metallic Scrappers</a>
       <a href="gangboxes.html">Gang Boxes</a>
       <a href="stringerboxes.html">Stringer Boxes</a>
       
