added all tabs added all html changed css having trouble with gangboxes

--- a/gangbox.html
+++ b/gangbox.html
@@ -7,6 +7,7 @@
 <link rel="stylesheet" href="style.css" />
 <script src="https://use.fontawesome.com/2691ad8745.js"></script>
  <!-- Compiled and minified CSS -->
+ <script src="https://use.fontawesome.com/1bf1d75aae.js"></script>
   
 <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
 
@@ -16,7 +17,8 @@
 <body>
 <div class="topheader">
 <div class="insidetop">
-
+<div class="logo"><img src="images/logo.jpg"></div>
+</div>
 </div>
 
 <div class="menu">
@@ -24,53 +26,45 @@
 <ul>
   <li><a href="index.html">Home</a></li>
   <li><a href="about.html">About Us</a></li>
-  <li><a href="services.html">Services</a></li>
+  <li><a href="index.html">Services</a></li>
   <li class="dropdown">
   <a href="javascript:void(0)" class="dropbtn">Product</a>
   <div class="dropdown-content">
-      <a href="scrapers.html">Non-Metallic Scrappers</a>
-      <a href="gangboxes.html">Gang Boxes</a>
+      <a href="nonmetalic.html">Non-Metallic Scrappers</a>
+      <a href="gangbox.html">Gang Boxes</a>
       <a href="stringerboxes.html">Stringer Boxes</a>
-      
+      <a href="product.html">Wolf Claw</a>
     </div>
   </li>
-  
+  <li><a href="contact.html">Contact Us</a></li>
 </ul>
 </div>
 </div>
 
-
+<div class="banner"><img src="images/banner.jpg"></div>
 
 <div class="content">
-<h1 style="margin:15px 0 15px 0px; font-size:40px; color:#222c52;">Non Metallic Scrappers: Part#12-Ex</h1>
-
+<h1 style="margin:15px 0 15px 0px; font-size:40px; color:#222c52;">Gang Box: GB-300 and GB-302</h1>
 </div>
 
 
 
-<div class="aftercontent">
+<div class="banner"><img src="images/gangbox.jpg"></div>
 
-
-
-
-
-
-
-<div class="aftercontentdata" style="margin:20px 0 40px 0px;">
-<div class="leftside" style="width:650px; float:right;">
-
-<p style="padding:27px; text-align: justify; background-color:#24a6c2; margin:0 0 0px 0; color:#FFF; font-size:19px; line-height:30px;">Exacta Plastics, have developed a unique scrapper material for scrapping as well as 0-ring and clips removal. These scrappers are hard at the edges for scrapping and at the same time flexible to bend and get into hard to reach places. Our non-metallic scrappers are widely used for various applications in the Aerospace industry, Military, Navy, Air Force, and composites manufacturers. The non-metalic scrappers are 3/4" wide and 6" long. They are in red color. <br><br>For One of our customer's specific application, we do make 20-Ex from their recommended Delrin material. 
-
-</p>
-
+<div class="content">
+<div class="leftside" style="width:1050px; margin:10px 0 25px 0;">
+<p style="padding:25px; text-align: justify; background-color:#24a6c2; margin:0 0 0px 0; color:#FFF; font-size:26px; line-height:35px;">Exacta Plastics makes Gang Boxes for temporary power distribution systems. They are made from PVC material and black in color for UV resistance. Gang Boxes come with standard Edison plate or GFI square receptable plate. GB-300 has one hole for the cable passage and the GB-302 has two holes for cable passage. </p>
 </div>
-
-<div class="rightsideabout">
-<div class="abouttitle" style="text-align:left;"><img src="scrape.jpg" width="350" height="351"/></div>
 </div>
 
 
-</div>
+
+
+<div class="aftercontent" style="height:auto;">
+
+
+
+
 
 <div class="botton">
 <div class="last"><h1 style="line-height:40px; padding:40px 0 0 0;">EXACTA<br>PLASTIC, INC.</h1></div>
