--- a/stringerboxes.html
+++ b/stringerboxes.html
@@ -13,10 +13,12 @@
 <title>Exacta Plastic</title>
 </head>
 
+
 <body>
-<div class="topheader">
+<div id="toplogo" class="topheader">
 <div class="insidetop">
 
+</div>
 </div>
 
 <div class="menu">
@@ -24,7 +26,7 @@
 <ul>
   <li><a href="index.html">Home</a></li>
   <li><a href="about.html">About Us</a></li>
-  <li><a href="services.html">Services</a></li>
+  <li><a href="index.html">Services</a></li>
   <li class="dropdown">
   <a href="javascript:void(0)" class="dropbtn">Product</a>
   <div class="dropdown-content">
@@ -34,7 +36,7 @@
       
     </div>
   </li>
-  
+ 
 </ul>
 </div>
 </div>
@@ -42,8 +44,7 @@
 
 
 <div class="content">
-<h1 style="margin:15px 0 15px 0px; font-size:40px; color:#222c52;">Non Metallic Scrappers: Part#12-Ex</h1>
-
+<h1 style="margin:15px 0 15px 0px; font-size:40px; color:#222c52;">Stringer Boxes: SB-100</h1>
 </div>
 
 
@@ -51,26 +52,56 @@
 <div class="aftercontent">
 
 
+<div class="aftercontentdata" style="margin:20px 0 60px 0;">
+<div class="leftside" style="width:520px;">
 
-
-
-
-
-<div class="aftercontentdata" style="margin:20px 0 40px 0px;">
-<div class="leftside" style="width:650px; float:right;">
-
-<p style="padding:27px; text-align: justify; background-color:#24a6c2; margin:0 0 0px 0; color:#FFF; font-size:19px; line-height:30px;">Exacta Plastics, have developed a unique scrapper material for scrapping as well as 0-ring and clips removal. These scrappers are hard at the edges for scrapping and at the same time flexible to bend and get into hard to reach places. Our non-metallic scrappers are widely used for various applications in the Aerospace industry, Military, Navy, Air Force, and composites manufacturers. The non-metalic scrappers are 3/4" wide and 6" long. They are in red color. <br><br>For One of our customer's specific application, we do make 20-Ex from their recommended Delrin material. 
+<p style="padding:40px; text-align: justify; background-color:#24a6c2; margin:0 0 0px 0; color:#FFF; font-size:19px; line-height:30px;">In the same line of temporary power systems, Exacta Plastics has designed stringer boxes keeping assembly in mind. The unique design has been developed with ease of cable and receptable assembly in the stringer line. The edges of the stringer box are designed for pulling stringer assembly with ease and not get caught at the corners. The stringer box is made from tough Poly Carbonate material to withstand rough handeling and drag on the surface. The stringer boxes also come with starndard Edison round and GFI square receptable plates.
 
 </p>
 
 </div>
 
-<div class="rightsideabout">
-<div class="abouttitle" style="text-align:left;"><img src="scrape.jpg" width="350" height="351"/></div>
+<div class="rightsideabout" style="float:left;">
+<div class="abouttitle widthstring" style="text-align:right; "><img src="string.jpg" width="480" height="380"></div>
 </div>
 
 
 </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 <div class="botton">
 <div class="last"><h1 style="line-height:40px; padding:40px 0 0 0;">EXACTA<br>PLASTIC, INC.</h1></div>
