--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
   <ul>
   <li><a href="index.html">Home</a></li>
   <li><a href="about.html">About Us</a></li>
-  <li><a href="index.html">Services</a></li>
+  <li><a href="services.html">Services</a></li>
   <li class="dropdown">
   <a href="javascript:void(0)" class="dropbtn">Products</a>
 
