--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
 
   <div class="dropdown-content">
       <a href="scrapers.html">Non-Metallic Scrappers</a>
-      <a href="gangboxes.html">Gang Boxes</a>
+      <a href="gangbox.html">Gang Boxes</a>
       <a href="stringerboxes.html">Stringer Boxes</a>
       
     </div>
