--- a/scrapers.html
+++ b/scrapers.html
@@ -29,7 +29,7 @@
   <a href="javascript:void(0)" class="dropbtn">Product</a>
   <div class="dropdown-content">
       <a href="scrapers.html">Non-Metallic Scrappers</a>
-      <a href="gangboxes.html">Gang Boxes</a>
+      <a href="gangbox.html">Gang Boxes</a>
       <a href="stringerboxes.html">Stringer Boxes</a>
       
     </div>
