--- a/gangbox.html
+++ b/gangbox.html
@@ -15,9 +15,9 @@
 </head>
 
 <body>
-<div class="topheader">
+<div id="ganggang" class="topheader">
 <div class="insidetop">
-<div class="logo"><img src="images/logo.jpg"></div>
+
 </div>
 </div>
 
