--- a/services.html
+++ b/services.html
@@ -261,7 +261,7 @@ fieldset {
 <div class="bottommenu" style="border-top: #FFF solid 2px; width:300px; padding:0 0 0 0; "><a href="index.html">HOME</a></div>
 <div class="bottommenu"><a href="about.html">ABOUT US</a></div>
 <div class="bottommenu"><a href="services.html">SERVICES</a></div>
-<div class="bottommenu"><a href="products.html">PRODUCTS</a></div>
+<div class="bottommenu"><a href="wolfclaw.html">WOLFCLAW</a></div>
 
 
 </div>
