--- a/stringerboxes.html
+++ b/stringerboxes.html
@@ -110,8 +110,8 @@
 <div class="bottommenu" style="border-top: #FFF solid 2px; width:300px; padding:0 0 0 0; "><a href="index.html">HOME</a></div>
 <div class="bottommenu"><a href="about.html">ABOUT US</a></div>
 <div class="bottommenu"><a href="service.html">SERVICE</a></div>
-<div class="bottommenu"><a href="product.html">PRODUCTS</a></div>
-<div class="bottommenu"><a href="contact.html">CONTACT US</a></div>
+<div class="bottommenu"><a href="wolfclaw.html">WOLFCLAW</a></div>
+
 
 </div>
 
