changed html on all pages to correct links

--- a/about.html
+++ b/about.html
@@ -72,10 +72,10 @@
 </p>
 <div class="title titletext" style="margin:15px 0 0 0;">OUR PRODUCTS&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</div>
 <p style="padding:15px; text-align:left; line-height:40px; font-size:22px; color:#09014c;">
-<a href="product.html"><i class="fa fa-plus-square" aria-hidden="true"></i> Wolf Claw Pole and Tree Climbing Boot Harness</a><br />
-<a href="gangboxes.html"><i class="fa fa-plus-square" aria-hidden="true"></i> Gang Boxes</a><br />
-<a href="stringerboxes.html"><i class="fa fa-plus-square" aria-hidden="true"></i> Stringer Boxes</a><br />
-<a href="nonmetalic.html"><i class="fa fa-plus-square" aria-hidden="true"></i> Non-Metallic Scrappers</a><br />
+<a href="wolfclaw.html"><i class="fa fa-plus-square" aria-hidden="true"></i> Wolf Claw Pole and Tree Climbing Boot Harness</a><br />
+<a href="gang.html"><i class="fa fa-plus-square" aria-hidden="true"></i> Gang Boxes</a><br />
+<a href="stringer.html"><i class="fa fa-plus-square" aria-hidden="true"></i> Stringer Boxes</a><br />
+<a href="scrapers.html"><i class="fa fa-plus-square" aria-hidden="true"></i> Non-Metallic Scrappers</a><br />
 </p>
 
 </div>
