--- a/gangbox.html
+++ b/gangbox.html
@@ -30,10 +30,10 @@
   <li class="dropdown">
   <a href="javascript:void(0)" class="dropbtn">Product</a>
   <div class="dropdown-content">
-      <a href="nonmetalic.html">Non-Metallic Scrappers</a>
-      <a href="gangbox.html">Gang Boxes</a>
-      <a href="stringerboxes.html">Stringer Boxes</a>
-      <a href="product.html">Wolf Claw</a>
+      <a href="scrapers.html">Non-Metallic Scrappers</a>
+      <a href="gang.html">Gang Boxes</a>
+      <a href="stringer.html">Stringer Boxes</a>
+      
     </div>
   </li>
  
