--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@ of molding machine range.
 <div class="title titletext" style="margin:15px 0 0 0;">OUR PRODUCTS&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</div>
 <p style="padding:15px; text-align:left; line-height:40px; font-size:22px; color:#09014c;">
 <a href="product.html"><i class="fa fa-plus-square" aria-hidden="true"></i> Wolf Claw Pole and Tree Climbing Boot Harness</a><br />
-<a href="gangboxes.html"><i class="fa fa-plus-square" aria-hidden="true"></i><a href="gangbx.html"/> Gang Boxes</a><br />
-<a href="stringerboxes.html"><i class="fa fa-plus-square" aria-hidden="true"></i><a href="stringerboxes.html"/> Stringer Boxes</a><br />
-<a href="nonmetalic.html"><i class="fa fa-plus-square" aria-hidden="true"></i><a href="scrapers.html"/> Non-Metallic Scrappers</a><br />
+<a href="gang.html"><i class="fa fa-plus-square" aria-hidden="true"></i><a href="gangbox.html"/> Gang Boxes</a><br />
+<a href="stringer.html"><i class="fa fa-plus-square" aria-hidden="true"></i><a href="stringer.html"/> Stringer Boxes</a><br />
+<a href="scrapers.html"><i class="fa fa-plus-square" aria-hidden="true"></i><a href="scrapers.html"/> Non-Metallic Scrappers</a><br />
 </p>
 
 </div>
