--- a/stringerboxes.html
+++ b/stringerboxes.html
@@ -32,7 +32,7 @@
   <div class="dropdown-content">
       <a href="scrapers.html">Non-Metallic Scrappers</a>
       <a href="gangbox.html">Gang Boxes</a>
-      <a href="stringerboxes.html">Stringer Boxes</a>
+      <a href="stringer.html">Stringer Boxes</a>
       
     </div>
   </li>
