more changes to html and pics

--- a/wolfclaw.html
+++ b/wolfclaw.html
@@ -54,7 +54,7 @@
 <div class="aftercontentdata">
 
 <div class="rightsideabout" style="float:left; width:300px;">
-<div class="abouttitle" style="text-align:left;"><img src="images/p1.jpg" width="250" height="348"></div>
+<div class="abouttitle" style="text-align:left;"><img src="climb.jpg" width="250" height="348"></div>
 </div>
 
 <div class="leftside" style="width:750px;">
