--- a/wolfclaw.html
+++ b/wolfclaw.html
@@ -30,7 +30,7 @@
       <a href="nonmetalic.html">Non-Metallic Scrappers</a>
       <a href="gangboxes.html">Gang Boxes</a>
       <a href="stringerboxes.html">Stringer Boxes</a>
-      <a href="product.html">Wolf Claw</a>
+      <a href="wolfclaw.html">Wolf Claw</a>
     </div>
   </li>
   
@@ -112,21 +112,13 @@
 
 
 <div class="text" style="width:1010px; float:left; margin:15px 0 15px 0; padding:5px 30px 0 10px;">
-<p style="padding:0 150px 0 150px; text-align:left; font-size:19px;">The Wold Claw Pole &amp; Tree Climbing Boot Harness, crafted for safety, durability, comfort and economy is competitively priced. Available in a varity of safety colors.<br><br>Professionals can spend hours climbing in complete comfort thanks to the Wolf Claw's design 
+<p style="padding:0 150px 0 150px; text-align:center; font-size:19px;">The Wold Claw Pole &amp; Tree Climbing Boot Harness, crafted for safety, durability, comfort and economy is competitively priced. Available in a varity of safety colors.<br><br>Professionals can spend hours climbing in complete comfort thanks to the Wolf Claw's design 
 features which include zero turning force, ventilation holes, reovable gaffs, and walking pads.
 </p>
 </div>
 
 
-<div class="text" style="width:1050px; float:left; margin:15px 0 15px 0; padding:5px 0px 0 0px;">
 
-<div class="bottommenu" style="border-top: #000 solid 2px;  padding:0 0 0 0;  background-color:#24a6c2; text-align:center; margin:0 0px 0 0; float:right;"><a href="product4.html">WC Features Combined</a></div>
-<div class="bottommenu" style="border-top: #000 solid 2px; padding:0 0px 0 0px;  background-color:#24a6c2; text-align:center; margin:0 10px 0 0; float:right;"><a href="product3.html">WC accessories Combined</a></div>
-<div class="bottommenu" style="border-top: #000 solid 2px;  padding:0 0 0 0;  background-color:#24a6c2; text-align:center; margin:0 10px 0 0; float:right;"><a href="product2.html">WC Features Combined</a></div>
-
-
-
-</div>
 
 
 <div class="botton">
