--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ of molding machine range.
 </p>
 <div class="title titletext" style="margin:15px 0 0 0;">OUR PRODUCTS&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</div>
 <p style="padding:15px; text-align:left; line-height:40px; font-size:22px; color:#09014c;">
-<a href="product.html"><i class="fa fa-plus-square" aria-hidden="true"></i> Wolf Claw Pole and Tree Climbing Boot Harness</a><br />
+<a href="wolfclaw.html"><i class="fa fa-plus-square" aria-hidden="true"></i> Wolf Claw Pole and Tree Climbing Boot Harness</a><br />
 <a href="gang.html"><i class="fa fa-plus-square" aria-hidden="true"></i><a href="gangbox.html"/> Gang Boxes</a><br />
 <a href="stringer.html"><i class="fa fa-plus-square" aria-hidden="true"></i><a href="stringer.html"/> Stringer Boxes</a><br />
 <a href="scrapers.html"><i class="fa fa-plus-square" aria-hidden="true"></i><a href="scrapers.html"/> Non-Metallic Scrappers</a><br />
