--- a/wolfclaw.html
+++ b/wolfclaw.html
@@ -76,7 +76,7 @@
 
 
 
-<p style="text-align:center;"><img src="images/ppp.jpg" width="700" height="367"></p>
+<p style="text-align:center;"><img src="leftgaff.jpg" width="700" height="367"></p>
 </div>
 
 
@@ -107,7 +107,7 @@
 
 
 <div class="rightsideabout" style="float:right; width:200px;">
-<div class="abouttitle" style="text-align:right; margin-top:0px; width:200px;"><img src="images/pp.jpg" width="130" height="216"></div>
+<div class="abouttitle" style="text-align:right; margin-top:0px; width:200px;"><img src="rightgaff.jpg" width="130" height="216"></div>
 </div>
 
 
