--- a/wolfclaw.html
+++ b/wolfclaw.html
@@ -139,7 +139,7 @@ features which include zero turning force, ventilation holes, reovable gaffs, an
 <div class="bottommenu" style="border-top: #FFF solid 2px; width:300px; padding:15px 0 0 0; font-size:22px; line-height:40px;">137 N. Joy St.<br>Corona, CA 92879<br>Ph. (818) 768-1234</div>
 </div>
 
-<div class="bottommenu" style="width:1050px; float:left; background-color:#FFF; color:#000;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;excataplastics.com 2017 / All Rights Reserved</div>
+<div class="bottommenu" style="width:1050px; float:left; background-color:#FFF; color:#000;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &copy; alphaonestategy.com 2017 <div>
 <div class="bottommenu" style="width:1050px; float:left; background-color:#09014c; color:#000; height:25px;"></div>
 
 
