basic tooling page without content needed

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link rel="stylesheet" href="style.css" />
+
 <script src="https://use.fontawesome.com/2691ad8745.js"></script>
  <!-- Compiled and minified CSS -->
   
@@ -33,6 +34,7 @@
       <a href="scrapers.html">Non-Metallic Scrappers</a>
       <a href="gangbox.html">Gang Boxes</a>
       <a href="stringerboxes.html">Stringer Boxes</a>
+      <a href="wolfclaw.html">Wolf Claw</a>
 
       
     </div>
@@ -76,8 +78,8 @@ of molding machine range.
 
 <div class="title">OUR SERVICES&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</div>
 <p style="padding:15px; text-align:left; line-height:40px; font-size:22px; color:#09014c;">
-<i class="fa fa-plus-square" aria-hidden="true"></i> Tooling<br />
-<i class="fa fa-plus-square" aria-hidden="true"></i> Plastic Injection Molding<br />
+<a href="tooling.html"><i class="fa fa-plus-square" aria-hidden="true"></i> Tooling<br />
+<a href="services.html"><i class="fa fa-plus-square" aria-hidden="true"></i> Plastic Injection Molding<br/></a>
 <i class="fa fa-plus-square" aria-hidden="true"></i> Assembling<br />
 </p>
 <div class="title titletext" style="margin:15px 0 0 0;">OUR PRODUCTS&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</div>
