--- a/wolfclaw.html
+++ b/wolfclaw.html
@@ -57,27 +57,16 @@
 </div>
 
 <div class="leftside" style="width:750px;">
-<p style="padding:25px 0 0 10px; text-align: justify; background-color:#24a6c2; margin:0 0 0px 0; color:#FFF; font-size:26px; line-height:30px;">When you climb for a living, your best friend is the wolf Claw... </p>
+<p style="padding:25px 0 0 0px; text-align: justify; background-color:#24a6c2; margin:0 0 0px 0; color:#FFF; font-size:26px; line-height:30px;">When you climb for a living, your best friend is the wolf Claw... </p>
 <p style="padding:20px; text-align: justify; background-color:#24a6c2; margin:0 0 0px 0; color:#FFF; font-size:20px; line-height:28px;">Since the turn of the century, steel and leather "boot strap" climbing harnesses have remained unchanged despite their obvious drawbacks and desperate need for improvement.</p> 
 <p style="padding:20px 0 0 10px; text-align: justify; background-color:#24a6c2; margin:0 0 0px 0; color:#FFF; font-size:26px; line-height:30px;">NOW, the imporvement is here!</p>
 <p style="padding:17px; text-align: justify; background-color:#24a6c2; margin:0 0 0px 0; color:#FFF; font-size:20px; line-height:28px;">It's the Wolf Claw Pole &amp; Tree Climbing Boot Harness engineered with today's super strong, light weight materials including High Impact Nylon and 15-5 Stainless Steel. The three position Wolf Claw pole climbing graff is Heat Treated.</p>
+<img id="gaf" src="gaff.jpg"/>
+</div>
 </div>
 
 
 
-
-</div>
-
-
-<div class="text" style="width:1010px; float:left; margin:15px 0 0 0; padding:5px 30px 0 10px;">
-<h1 style="margin:35px 0 0 0; font-size:30px; color:#222c52; text-align:center;">WOLF CLAWS CAN NOW BE ADJUSTED TO YOUR PREFERENCE! </h1>
-<h1 style="margin:0px 0 0 0; font-size:30px; color:#222c52; text-align:center;">Offset Gaff or Straigh Gaff Configuration </h1>
-
-
-
-
-<p style="text-align:center;"><img src="leftgaff.jpg" width="700" height="367"></p>
-</div>
 
 
 
@@ -106,9 +95,7 @@
 
 
 
-<div class="rightsideabout" style="float:right; width:200px;">
-<div class="abouttitle" style="text-align:right; margin-top:0px; width:200px;"><img src="rightgaff.jpg" width="130" height="216"></div>
-</div>
+
 
 
 <div class="text" style="width:1010px; float:left; margin:15px 0 15px 0; padding:5px 30px 0 10px;">
