fixed aboutme page

--- a/about.html
+++ b/about.html
@@ -31,6 +31,7 @@
       <a href="scrapers.html">Non-Metallic Scrappers</a>
       <a href="gangbox.html">Gang Boxes</a>
       <a href="stringer.html">Stringer Boxes</a>
+      <a href="wolfclaw.html">Wolf Claw</a>
       
     </div>
 
@@ -55,7 +56,7 @@
 </p>
 </div>
 </div>
-<img class="aboutpic" src="about.jpg">
+<img id="aboutpic" src="about.jpg">
 
 
 
