added hyperlinks to wolf claw..added all I could with no photos or text

--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
       <a href="scrapers.html">Non-Metallic Scrappers</a>
       <a href="gangbox.html">Gang Boxes</a>
       <a href="stringer.html">Stringer Boxes</a>
-      <a href="wolfclaw.html">Wolf Claw</a>
+      <a href="wolfclaw.html">Wolf Claw
       
     </div>
 
@@ -48,6 +48,7 @@
 <div class="content">
 
 <h1 style="margin:20px 0 20px 0; font-size:35px;">ABOUT US</h1>
+<img id="aboutpic" src="about.jpg">
 <hr offshore in India.</p>
 <div class="fontcolor">
 <p  style="margin:0 0 0 0; padding:10px 0 15px 0; padding-left:10px; font-size:24px; width:101%; text-align:center;">Exacta Plastics, Inc. serves their customers in USA and abroad with it’s complete plastic injection molding and mold making capabilities in Southern California. To be competitive in mold making we also have our mold making facility offshore in India.</p>
@@ -56,7 +57,7 @@
 </p>
 </div>
 </div>
-<img id="aboutpic" src="about.jpg">
+
 
 
 
