--- a/services.html
+++ b/services.html
@@ -32,6 +32,7 @@
       <a href="scrapers.html">Non-Metallic Scrappers</a>
       <a href="gangbox.html">Gang Boxes</a>
       <a href="stringerboxes.html">Stringer Boxes</a>
+      <a href="wolfclaw.html">Wolf Claw</a>
       
     </div>
 
@@ -45,7 +46,7 @@
 <div class="content">
 
 <img class="gearbanner gearpadding" src="gears.jpg">
-<h1>Plastic Injection Molding</h1>
+<h1 id="pim">Plastic Injection Molding</h1>
 
 <div class="fontcolor">
 
