--- a/wolfclaw.html
+++ b/wolfclaw.html
@@ -84,11 +84,11 @@
 
 
 <p style="padding:25px 0 25px 45px; text-align: justify; margin:0 0 0px 0;  font-size:24px; line-height:35px;">
-* The Wolf Claw versus Traditional Boot Climbing Harness<br>
-* Features &amp; Improvements of the Wolf Claw Climbing Harness<br>
-* Wolf Claw Models<br>
-* Wolf Claw Climbing Boot Harness Accessories<br>
-* Wolf Claw Company History
+<a href="#">* The Wolf Claw versus Traditional Boot Climbing Harness<br></a>
+<a href="#">* Features &amp; Improvements of the Wolf Claw Climbing Harness<br></a>
+<a href="#">* Wolf Claw Models<br></a>
+<a href="#">* Wolf Claw Climbing Boot Harness Accessories<br></a>
+<a href="#">* Wolf Claw Company History</a>
  </p>
 
 </div>
