--- a/wolfclaw.html
+++ b/wolfclaw.html
@@ -53,7 +53,7 @@
 <div class="aftercontentdata">
 
 <div class="rightsideabout" style="float:left; width:300px;">
-<div class="abouttitle" style="text-align:left;"><img src="climb.jpg" width="250" height="348"></div>
+<div class="abouttitle" style="text-align:left;"><img src="climb.jpg" width=299 height="348"></div>
 </div>
 
 <div class="leftside" style="width:750px;">
@@ -64,21 +64,6 @@
 <img id="gaf" src="gaff.jpg"/>
 </div>
 </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 <div class="leftside" style="width:800px; margin:00px 0 1px 0; float:left; line-height:25px;">
 
