added all wolfgang dropdowns plus more

--- a/gangbox.html
+++ b/gangbox.html
@@ -33,6 +33,8 @@
       <a href="scrapers.html">Non-Metallic Scrappers</a>
       <a href="gang.html">Gang Boxes</a>
       <a href="stringer.html">Stringer Boxes</a>
+      <a href="wolfclaw.html">Wolf Claw</a>
+
       
     </div>
   </li>
