--- a/scrapers.html
+++ b/scrapers.html
@@ -31,6 +31,7 @@
       <a href="scrapers.html">Non-Metallic Scrappers</a>
       <a href="gangbox.html">Gang Boxes</a>
       <a href="stringerboxes.html">Stringer Boxes</a>
+      <a href="wolfclaw.html">Wolf Claw</a>
       
     </div>
   </li>
