boot climbing harness html almost done

--- a/accesories.html
+++ b/accesories.html
@@ -50,44 +50,29 @@
 <div class="aftercontent">
 
 
-<div class="aftercontentdata">
+<div class="accessories">
 
-<div class="rightsideabout" style="float:left; width:300px;">
-<div class="abouttitle" style="text-align:left;"><img src="climb.jpg" width=299 height="348"></div>
-</div>
 
 <div class="leftside" style="width:750px;">
-<p style="padding:25px 0 0 0px; text-align: justify; background-color:#24a6c2; margin:0 0 0px 0; color:#FFF; font-size:26px; line-height:30px;">When you climb for a living, your best friend is the wolf Claw... </p>
-<p style="padding:20px; text-align: justify; background-color:#24a6c2; margin:0 0 0px 0; color:#FFF; font-size:20px; line-height:28px;">Since the turn of the century, steel and leather "boot strap" climbing harnesses have remained unchanged despite their obvious drawbacks and desperate need for improvement.</p> 
-<p style="padding:20px 0 0 10px; text-align: justify; background-color:#24a6c2; margin:0 0 0px 0; color:#FFF; font-size:26px; line-height:30px;">NOW, the imporvement is here!</p>
-<p style="padding:17px; text-align: justify; background-color:#24a6c2; margin:0 0 0px 0; color:#FFF; font-size:20px; line-height:28px;">It's the Wolf Claw Pole &amp; Tree Climbing Boot Harness engineered with today's super strong, light weight materials including High Impact Nylon and 15-5 Stainless Steel. The three position Wolf Claw pole climbing graff is Heat Treated.</p>
-<img id="gaf" src="gaff.jpg"/>
+<p style="padding:25px 0 0 0px; text-align: justify; background-color:#24a6c2; margin:0 0 0px 0; color:#FFF; font-size:18px; padding-left:20px; padding-right:15px; line-height:30px;">Everything on the Wolf Claw and Tree Climbing Boot Harness is replaceable. We manufacture and stock a full line of accessories for the Wolf Claw. Show and described on the right are the accessories and parts available for the Wolf Claw. </p>
+<p style="padding:20px; text-align: justify; background-color:#24a6c2; margin:0 0 0px 0; color:#FFF; font-size:18px; line-height:28px;">We also offer replacement neopre boot liners and Wolf CLaw carring bags (shown below). Ever Wolf CLaw CLimbing Boot Harness comes with the full compliment of accessories including the hhandy carrying bag. If you would like to order accessories for your Wolf Claw online, proceed to our Acessories Order Form.</p> 
+
+
 </div>
 </div>
-
-<div class="leftside" style="width:800px; margin:00px 0 1px 0; float:left; line-height:25px;">
-
-
-<p style="padding:25px 0 25px 45px; text-align: justify; margin:0 0 0px 0;  font-size:24px; line-height:35px;">
-<a href="#">* The Wolf Claw versus Traditional Boot Climbing Harness<br></a>
-<a href="#">* Features &amp; Improvements of the Wolf Claw Climbing Harness<br></a>
-<a href="#">* Wolf Claw Models<br></a>
-<a href="bootharness.html">* Wolf Claw Climbing Boot Harness Accessories<br></a>
-<a href="#">* Wolf Claw Company History</a>
- </p>
-
-</div>
-
-
-
-
-
-
-<div class="text" style="width:1010px; float:left; margin:15px 0 15px 0; padding:5px 30px 0 10px;">
-<p style="padding:0 150px 0 150px; text-align:center; font-size:19px;">The Wolf Claw Pole &amp; Tree Climbing Boot Harness, crafted for safety, durability, comfort and economy is competitively priced. Available in a varity of safety colors.<br><br>Professionals can spend hours climbing in complete comfort thanks to the Wolf Claw's design 
-features which include zero turning force, ventilation holes, removable gaffs, and walking pads.
+<div class="list">
+<p>
+1. Straps- We offer the standard belt type upper and lower straps.
 </p>
 </div>
+
+
+
+
+
+
+
+
 
 
 
