added text fixed font color

--- a/bootharness.html
+++ b/bootharness.html
@@ -43,6 +43,7 @@
 <div class="content">
 <h1 style="margin:15px 0 0 0; font-size:100px; color:#222c52;">Wolf Claw</h1>
 <h1 style="margin:0px 0 0 0; font-size:42px; color:#222c52;"><b>Pole &amp; Tree Climbing Boot Harness</b></h1>
+<h1 style="margin:0px 0 0 0; font-size:32px; color:#222c52;"><b>Wolf Claw Tree and Pole Climbing Accessories</b></h1>
 </div>
 
 
@@ -55,7 +56,7 @@
 
 <div class="leftside" style="width:750px;">
 <p style="padding:25px 0 0 0px; text-align: justify; background-color:#24a6c2; margin:0 0 0px 0; color:#FFF; font-size:18px; padding-left:20px; padding-right:15px; line-height:30px;">Everything on the Wolf Claw and Tree Climbing Boot Harness is replaceable. We manufacture and stock a full line of accessories for the Wolf Claw. Show and described on the right are the accessories and parts available for the Wolf Claw. </p>
-<p style="padding:20px; text-align: justify; background-color:#24a6c2; margin:0 0 0px 0; color:#FFF; font-size:18px; line-height:28px;">We also offer replacement neoprene boot liners and Wolf CLaw carring bags (shown below). Ever Wolf CLaw CLimbing Boot Harness comes with the full compliment of accessories including the hhandy carrying bag. If you would like to order accessories for your Wolf Claw online, proceed to our Acessories Order Form.</p> 
+<p style="padding:20px; text-align: justify; background-color:#24a6c2; margin:0 0 0px 0; color:#FFF; font-size:18px; line-height:28px;">We also offer replacement neoprene boot liners and Wolf Claw carring bags (shown below). Ever Wolf CLaw CLimbing Boot Harness comes with the full compliment of accessories including the handy carrying bag. If you would like to order accessories for your Wolf Claw online, proceed to our Acessories Order Form.</p> 
 
 
 </div>
@@ -79,7 +80,7 @@
 <p>
 6. Walking Pads- One of the features of the Wol CLaw is the ability to walk around with them on. On the bottom of the boot is a nylon walking pad. Should the pad become worn, we offer replacement pads.
 </p>
-</div>
+
 </div>
 
 
